@@ -171,6 +171,24 @@ name|module
 operator|.
 name|descriptor
 operator|.
+name|Configuration
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|ivy
+operator|.
+name|core
+operator|.
+name|module
+operator|.
+name|descriptor
+operator|.
 name|DefaultArtifact
 import|;
 end_import
@@ -226,6 +244,26 @@ operator|.
 name|descriptor
 operator|.
 name|ModuleDescriptor
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|ivy
+operator|.
+name|core
+operator|.
+name|module
+operator|.
+name|descriptor
+operator|.
+name|Configuration
+operator|.
+name|Visibility
 import|;
 end_import
 
@@ -1239,60 +1277,72 @@ literal|true
 argument_list|)
 decl_stmt|;
 comment|/* Map all public dependencies */
+name|Configuration
+index|[]
+name|m2Confs
+init|=
+name|PomModuleDescriptorBuilder
+operator|.
+name|MAVEN2_CONFIGURATIONS
+decl_stmt|;
+for|for
+control|(
+name|int
+name|i
+init|=
+literal|0
+init|;
+name|i
+operator|<
+name|m2Confs
+operator|.
+name|length
+condition|;
+name|i
+operator|++
+control|)
+block|{
+if|if
+condition|(
+name|Visibility
+operator|.
+name|PUBLIC
+operator|.
+name|equals
+argument_list|(
+name|m2Confs
+index|[
+name|i
+index|]
+operator|.
+name|getVisibility
+argument_list|()
+argument_list|)
+condition|)
+block|{
 name|dd
 operator|.
 name|addDependencyConfiguration
 argument_list|(
-literal|"compile"
-argument_list|,
-literal|"compile"
-argument_list|)
-expr_stmt|;
-name|dd
+name|m2Confs
+index|[
+name|i
+index|]
 operator|.
-name|addDependencyConfiguration
-argument_list|(
-literal|"runtime"
+name|getName
+argument_list|()
 argument_list|,
-literal|"runtime"
-argument_list|)
-expr_stmt|;
-name|dd
+name|m2Confs
+index|[
+name|i
+index|]
 operator|.
-name|addDependencyConfiguration
-argument_list|(
-literal|"default"
-argument_list|,
-literal|"default"
+name|getName
+argument_list|()
 argument_list|)
 expr_stmt|;
-name|dd
-operator|.
-name|addDependencyConfiguration
-argument_list|(
-literal|"master"
-argument_list|,
-literal|"master"
-argument_list|)
-expr_stmt|;
-name|dd
-operator|.
-name|addDependencyConfiguration
-argument_list|(
-literal|"provided"
-argument_list|,
-literal|"provided"
-argument_list|)
-expr_stmt|;
-name|dd
-operator|.
-name|addDependencyConfiguration
-argument_list|(
-literal|"system"
-argument_list|,
-literal|"system"
-argument_list|)
-expr_stmt|;
+block|}
+block|}
 name|mdBuilder
 operator|.
 name|addDependency
