@@ -101,6 +101,7 @@ for detailed view of each issue, please consult http://issues.apache.org/jira/br
 - IMPROVEMENT: Trace a message when a property file referenced from the settings doesn't exixts (IVY-1074)
 - IMPROVEMENT: use defaultconf in combination with defaultconfmapping (IVY-1135) (thanks to Jon Schneider)
 
+- FIX: optional dependencies, sources and javadocs aren't resolved when a maven module is relocated
 - FIX: Encountered 'multiple artifacts retrieved to same file' error when module does not have multiple artifacts (IVY-1148)
 - FIX: Use of a shared DocumentBuilder causes SAXException during parallel resolutions (IVY-1147)
 - FIX: metadata lock files not always deleted from cache (IVY-1145) (thanks to Jason Trump)
